bugs on iPhone 6 | Pricing Table Updates
fixed bug on iPhone 6 that didnt have proper margins on the header of the What We Offer page
Updated Pricing Table content as requested by client

--- a/src/layouts/whatweoffer.scss
+++ b/src/layouts/whatweoffer.scss
@@ -1,5 +1,9 @@
 @import "_variables.scss";
 
+.whatWeOfferHeader {
+    padding-bottom: 15vh;
+}
+
 .whatWeOfferTemplate {
     width: 100%;
     height: auto;
